fix header text (too small)

--- a/src/components/component_css/header.css
+++ b/src/components/component_css/header.css
@@ -93,11 +93,11 @@
 }
 @media screen and (max-width: 400px) {
     #logo h1 {
-        font-size:1rem;
+        font-size:1.2rem;
         -webkit-text-stroke-width: 0.8px;
     }
     .hamburgerMenuButtons > * {
-        font-size: 1rem;
+        font-size: 1.2rem;
         -webkit-text-stroke-width: 0.8px;
     }
 }
